--- a/FrontHotel/mainmanifest.json
+++ b/FrontHotel/mainmanifest.json
@@ -9,17 +9,17 @@
   "description": "Hotel Housekeeping PWA",
   "icons": [
     {
-      "src": "/FrontHotel/images/icons/192.png",
+      "src": "./images/icons/192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/FrontHotel/images/icons/512.png",
+      "src": "./images/icons/512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/FrontHotel/images/icons/180.png",
+      "src": "./images/icons/180.png",
       "sizes": "180x180",
       "type": "image/png"
     }
