--- a/FrontHotel/mainmanifest.json
+++ b/FrontHotel/mainmanifest.json
@@ -1,8 +1,7 @@
 {
   "name": "Hotel PWA",
   "short_name": "HotelPWA",
-  "start_url": "/FrontHotel/index.html",
-  "scope": "/FrontHotel/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#1A202C",
   "theme_color": "#4A90E2",
